--- a/index.html
+++ b/index.html
@@ -35,6 +35,46 @@
 <html>
   <head>
     <title>CLM Readiness Score Calculator</title>
+  <script>
+async function getAccessToken() {
+  const clientId = '3MVG9p1Q1BCe9GmCmoN0dzzUvEZmK6HPM04TlBqq0t5EioK4KbCvyIeD69oWx7yNmcVDtMV7bHuf.lS3.OkL4';
+  const clientSecret = 'EEE4C8BE84E782268677D2350F322D921D38D8B9D5BCE32868F76F112144AA1A';
+  const username = '----removed---';
+  const password = '---removed--';
+
+  const response = await fetch('https://login.salesforce.com/services/oauth2/token', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/x-www-form-urlencoded'
+    },
+    body: `grant_type=password&client_id=${clientId}&client_secret=${clientSecret}&username=${username}&password=${password}`
+  });
+
+  const data = await response.json();
+  return data.access_token;
+}
+</script>
+
+<script>
+async function updateOpportunity(opportunityId, secondScore, accessToken) {
+  const url = `https://woodwardsystems-dev-ed.lightning.force.com/services/data/v52.0/sobjects/Opportunity/${opportunityId}`;
+  const response = await fetch(url, {
+    method: 'PATCH',
+    headers: {
+      'Content-Type': 'application/json',
+      'Authorization': `Bearer ${accessToken}`
+    },
+    body: JSON.stringify({
+      Second_Score_Field__c: secondScore
+    })
+  });
+
+  const data = await response.json();
+  return data;
+}
+</script>
+
+
   </head>
   <body>
     <h1>CLM Readiness Score Calculator</h1>
@@ -97,14 +137,18 @@
       </p>
       <p>
         <label>
-          9. Are you excited to get going?
-          <input type="radio" name="q9" value="1" required> Yes
-          <input type="radio" name="q9" value="0"> No
+          9. Internal Only - What is the customer's Account Score Band, in Salesforce?
+          <input type="radio" name="q9" value="1" required> A
+          <input type="radio" name="q9" value="1" required> B
+          <input type="radio" name="q9" value="1" required> C
+          <input type="radio" name="q9" value="0" required> D
+          <input type="radio" name="q9" value="0" required> F
         </label>
       </p>
       <button type="button" onclick="calculateScore()">Calculate CLM Readiness Score</button>
     </form>
     <p id="score"></p>
+    <p id="second-score"></p>
 <br><br><br>
     by Zach Woodward
    
@@ -116,6 +160,9 @@
           .reduce((acc, el) => acc + 1, 0) * 11;
         const scoreDisplay = document.getElementById('score');
         scoreDisplay.textContent = `Your CLM readiness score is ${score}.`;
+        const secondScoreDisplay = document.getElementById('second-score');
+  secondScoreDisplay.innerText = `Opportunity Quality Score: ${score / 20}`;
+        
         if (score >= 80) {
           scoreDisplay.style.color = 'green';
         } else if (score >= 60) {
@@ -125,5 +172,13 @@
         }
       }
     </script>
+  
+  <script> // Get the access token
+  const accessToken = await getAccessToken();
+
+  // Update the Opportunity record
+  const opportunityId = '0065f00000AF6WPAA1'; // replace with the actual oppty ID
+  await updateOpportunity(opportunityId, secondScore, accessToken);
+</script>
   </body>
 </html>
