--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <title>CLM Readiness Score Calculator</title>
   <script>
 async function getAccessToken() {
-  const clientId = '3MVG9p1Q1BCe9GmCmoN0dzzUvEZmK6HPM04TlBqq0t5EioK4KbCvyIeD69oWx7yNmcVDtMV7bHuf.lS3.OkL4';
-  const clientSecret = 'EEE4C8BE84E782268677D2350F322D921D38D8B9D5BCE32868F76F112144AA1A';
+  const clientId = 'ZZZZZZZZZZZZZ.lS3.OkL4';
+  const clientSecret = 'ZZZZZZZZZZZZZZZZZZZ';
   const username = '----removed---';
   const password = '---removed--';
 
